--- a/package.json
+++ b/package.json
@@ -2,23 +2,28 @@
   "name": "vue-test",
   "version": "1.0.0",
   "description": "",
-  "main": "main.js",
+  "author": "",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "main": "main.js",
   "dependencies": {
     "core-js": "^2.6.5",
     "vue": "^2.6.10",
     "vuelidate": "^0.7.4",
+    "vuetify": "^2.1.0",
     "vuex": "^3.1.1"
   },
   "devDependencies": {
     "@vue/cli-service": "3.8.4",
-    "vue-template-compiler": "2.6.10"
-  }
+    "sass": "^1.17.4",
+    "sass-loader": "^7.1.0",
+    "vue-cli-plugin-vuetify": "^1.0.1",
+    "vue-template-compiler": "2.6.10",
+    "vuetify-loader": "^1.2.2"
+  },
+  "keywords": [],
+  "license": "ISC"
 }
