--- a/package.json
+++ b/package.json
@@ -10,18 +10,28 @@
   },
   "main": "main.js",
   "dependencies": {
-    "core-js": "^2.6.5",
+    "core-js": "^3.1.2",
     "vue": "^2.6.10",
     "vuelidate": "^0.7.4",
     "vuetify": "^2.1.0",
+    "vue-class-component": "^7.0.2",
+    "vue-property-decorator": "^8.1.0",
+    "vue-router": "^3.0.6",
     "vuex": "^3.1.1"
   },
   "devDependencies": {
-    "@vue/cli-service": "3.8.4",
+    "@vue/cli-plugin-babel": "^4.0.0",
+    "@vue/cli-plugin-typescript": "^4.0.0",
+    "@vue/cli-service": "^4.0.0",
+    "node-sass": "^4.12.0",
+    "sass-loader": "^8.0.0",
+    "typescript": "~3.5.3",
+    "vue-template-compiler": "^2.6.10",
+    "vue-loader": "^15.7.1",
+    "@types/vuelidate": "^0.7.7",
+    "@babel/core": "^7.4.5",
     "sass": "^1.17.4",
-    "sass-loader": "^7.1.0",
     "vue-cli-plugin-vuetify": "^1.0.1",
-    "vue-template-compiler": "2.6.10",
     "vuetify-loader": "^1.2.2"
   },
   "keywords": [],
